<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@drawable/coffeebeans"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_gravity="center_vertical"
    >

    <TableRow
        android:layout_height="fill_parent"
        android:layout_width="match_parent"
        >


    <TextView
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_column="1"
        android:layout_span="2"
        android:layout_weight="1"/>
    </TableRow>
    <!--TableRow
        android:layout_height="fill_parent"
        android:layout_width="match_parent"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_tagline"
        android:textSize="20dp"
        android:layout_column="1"
        android:layout_span="2"
        android:layout_weight="1"/>
</TableRow-->
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_assessment_black_36dp"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_feature1"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:layout_column="2"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_today_black_36dp"
                android:layout_column="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:text="@string/app_feature2"
                android:textSize="20dp"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

        </TableRow>
    </TableLayout>

</LinearLayout>
