<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@drawable/coffeebeans"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="5dp" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_rankgrade"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textAlignment="center"
                android:layout_weight="2"
                />

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="2dp" android:layout_gravity="center">
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/relativelayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"  android:layout_gravity="center" android:gravity="center" android:layout_weight="1">

                <ImageView
                    android:id="@+id/myImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/trframered"

                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/myImageView"
                    android:layout_alignTop="@id/myImageView"
                    android:layout_alignRight="@id/myImageView"
                    android:layout_alignBottom="@id/myImageView"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/myImageViewTextHead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:text="@string/app_last_rank_grade"
                        android:textColor="#000000" />
                    <TextView
                        android:id="@+id/txtLastDayRankGrade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:text="-"
                        android:textColor="#000000" />

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/relativelayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_gravity="center" android:gravity="center" android:layout_weight="1">

                <ImageView
                    android:id="@+id/myImageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/trframered" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/myImageView1"
                    android:layout_alignTop="@id/myImageView1"
                    android:layout_alignRight="@id/myImageView1"
                    android:layout_alignBottom="@id/myImageView1"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/myImageViewTextHead1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:text="All Time"
                        android:textColor="#000000" />
                    <TextView
                        android:id="@+id/txtLastAllTimeRankGrade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:text="-"
                        android:textColor="#000000" />

                </LinearLayout>


            </RelativeLayout>
            <!--ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/trframered"

                android:layout_gravity="center"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/trframered"
                android:layout_gravity="center"
                /-->

        </TableRow>
    </TableLayout>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_get_questions"
                android:id="@+id/btnNext"
                android:textColor="@color/windowBackground"
                android:layout_span="2"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="match_parent"
            >


            <TextView
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_get_started"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:layout_column="1"
                android:layout_span="2"
                android:layout_weight="1"
                android:padding="10dp"/>
        </TableRow>
        <!--TableRow
            android:layout_height="fill_parent"
            android:layout_width="match_parent"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_tagline"
            android:textSize="20dp"
            android:layout_column="1"
            android:layout_span="2"
            android:layout_weight="1"/>
    </TableRow-->
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_assessment_black_36dp"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_intro"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_margin="5dp"
                android:layout_column="2"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_today_black_36dp"
                android:layout_column="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/app_base_score"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_sentiment_very_satisfied_black_36dp"
                android:layout_column="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/app_swift_response_score"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_done_all_black_36dp"
                android:layout_column="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/app_rank_grade"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

        </TableRow>

    </TableLayout>

</LinearLayout>
